tests/ui/errors/snapshots/parse_error_generic_missing_closing_angle.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:3:18]
 2 │ fn test() {
 3 │   let x: Foo<Bar = 1;
   ·                  ┬
   ·                  ╰── expected `>`
 4 │ }
   ╰────
  help: Add `>` to close the type arguments · code: [parse.syntax_error]
